localization/v2.6.x/site/id/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: >-
  Halaman ini menyediakan daftar tutorial bagi Anda untuk berinteraksi dengan
  Milvus dan alat bantu pihak ketiga.
title: Ikhtisar Integrasi
---
<h1 id="Integrations-Overview" class="common-anchor-header">Ikhtisar Integrasi<button data-href="#Integrations-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Halaman ini menyediakan daftar tutorial bagi Anda untuk berinteraksi dengan Milvus dan alat bantu pihak ketiga.</p>
<table>
<thead>
<tr><th>Tutorial</th><th>Kasus Penggunaan</th><th>Mitra atau Tumpukan</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/id/integrate_with_llamaindex.md">RAG dengan Milvus dan LlamaIndex</a></td><td>RAG</td><td>Milvus, LLamaIndex</td></tr>
<tr><td><a href="/docs/id/integrate_with_langchain.md">RAG dengan Milvus dan LangChain</a></td><td>RAG</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/id/milvus_hybrid_search_retriever.md">Retriever Pencarian Hibrida Milvus di LangChain</a></td><td>Pencarian Hibrida</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/id/basic_usage_langchain.md">Gunakan Milvus sebagai Penyimpan Vektor di LangChain</a></td><td>Pencarian Semantik</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/id/full_text_search_with_langchain.md">Menggunakan Pencarian Teks Lengkap dengan LangChain dan Milvus</a></td><td>Pencarian Teks Lengkap</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/id/integrate_with_haystack.md">RAG dengan Milvus dan Haystack</a></td><td>RAG</td><td>Milvus, Haystack</td></tr>
<tr><td><a href="/docs/id/llamaindex_milvus_async.md">RAG dengan Milvus dan LlamaIndex Async API</a></td><td>Okestrasi</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/id/milvus_rag_with_vllm.md">Membangun RAG dengan Milvus, vLLM, dan Llama 3.1</a></td><td>RAG</td><td>Milvus, vLLM, LlamaIndex</td></tr>
<tr><td><a href="/docs/id/llamaindex_milvus_full_text_search.md">Menggunakan Penelusuran Teks Lengkap dengan LlamaIndex dan Milvus</a></td><td>Pencarian Teks Lengkap</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/id/dify_with_milvus.md">Menerapkan Dify dengan Milvus</a></td><td>Okestrasi</td><td>Milvus, Dify</td></tr>
<tr><td><a href="/docs/id/rag_with_langflow.md">Membangun Sistem RAG Menggunakan Langflow dengan Milvus</a></td><td>Ochestration</td><td>Milvus, Langflow</td></tr>
<tr><td><a href="/docs/id/use_milvus_in_private_gpt.md">Menggunakan Milvus di PrivateGPT</a></td><td>Ochestration</td><td>Pencarian vektor</td></tr>
<tr><td><a href="/docs/id/use_milvus_in_docsgpt.md">Gunakan Milvus di DocsGPT</a></td><td>Okestrasi</td><td>DocsGPT, Milvus</td></tr>
<tr><td><a href="/docs/id/use_milvus_with_sambanova.md">Menggunakan Milvus dengan SambaNova</a></td><td>Orkestrasi</td><td>Milvus, SambaNova</td></tr>
<tr><td><a href="/docs/id/milvus_rag_with_dynamiq.md">Memulai dengan Dynamiq dan Milvus</a></td><td>Orkestrasi</td><td>Milvus, Dynamiq</td></tr>
<tr><td><a href="/docs/id/llama_stack_with_milvus.md">Membangun RAG dengan Llama Stack dengan Milvus</a></td><td>Orkestrasi</td><td>Milvus, Llama Stack</td></tr>
<tr><td><a href="/docs/id/integrate_with_memgpt.md">Agen Chatbot dengan Milvus dan MemGPT</a></td><td>Agen</td><td>Milvus, MemGPT</td></tr>
<tr><td><a href="/docs/id/llama_agents_metadata.md">Sistem Multi-agen dengan Mistral AI, Milvus, dan Llama-agent</a></td><td>Agen</td><td>Milvus, Mistral AI, LlamaIndex</td></tr>
<tr><td><a href="/docs/id/quickstart_mem0_with_milvus.md">Memulai dengan Mem0 dan Milvus</a></td><td>Agen</td><td>Mem0, Milvus</td></tr>
<tr><td><a href="/docs/id/integrate_with_agno.md">Mengintegrasikan Milvus dengan Agno</a></td><td>Agen</td><td>Milvus, Agno</td></tr>
<tr><td><a href="/docs/id/milvus_and_mcp.md">MCP + Milvus: Menghubungkan AI dengan Basis Data Vektor</a></td><td>Agen</td><td>Milvus, MCP</td></tr>
<tr><td><a href="/docs/id/openai_agents_milvus.md">Integrasi Milvus dengan Agen OpenAI: Panduan Langkah-demi-Langkah</a></td><td>Agen</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/id/integrate_with_ragas.md">Evaluasi RAG dengan Ragas dan Milvus</a></td><td>Evaluasi</td><td>Milvus, Ragas</td></tr>
<tr><td><a href="/docs/id/evaluation_with_deepeval.md">Evaluasi dengan DeepEval</a></td><td>Evaluasi &amp; Pengamatan</td><td>Milvus, DeepEval</td></tr>
<tr><td><a href="/docs/id/evaluation_with_phoenix.md">Evaluasi dengan Arize Pheonix</a></td><td>Evaluasi &amp; Keteramatan</td><td>Milvus, Arize Pheonix</td></tr>
<tr><td><a href="/docs/id/integrate_with_langfuse.md">Milvus di Langfuse</a></td><td>Keteramatan</td><td>Milvus, Langfuse</td></tr>
<tr><td><a href="/docs/id/integrate_with_openai.md">Pencarian Semantik dengan Milvus dan OpenAI</a></td><td>Pencarian Semantik</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/id/integrate_with_cohere.md">Menjawab Pertanyaan Menggunakan Milvus dan Cohere</a></td><td>Pencarian Semantik</td><td>Milvus, Cohere</td></tr>
<tr><td><a href="/docs/id/integrate_with_hugging-face.md">Penjawaban Pertanyaan menggunakan Milvus dan HuggingFace</a></td><td>Penjawaban Pertanyaan</td><td>Milvus, HuggingFace</td></tr>
<tr><td><a href="/docs/id/integrate_with_pytorch.md">Pencarian Gambar menggunakan Milvus dan Pytorch</a></td><td>Pencarian Semantik</td><td>Milvus, Pytorch</td></tr>
<tr><td><a href="/docs/id/integrate_with_sentencetransformers.md">Pencarian Film menggunakan Milvus dan SentenceTransfromers</a></td><td>Pencarian Semantik</td><td>Milvus, SentenceTransformers</td></tr>
<tr><td><a href="/docs/id/integrate_with_voxel51.md">Melakukan Pencarian Visi dengan Milvus dan FiftyOne</a></td><td>Pencarian Semantik</td><td>Milvus, FiftyOne</td></tr>
<tr><td><a href="/docs/id/integrate_with_voyageai.md">Pencarian Semantik dengan Milvus dan VoyageAI</a></td><td>Pencarian Semantik</td><td>Milvus, VoyageAI</td></tr>
<tr><td><a href="/docs/id/integrate_with_bentoml.md">RAG dengan Milvus dan BentoML</a></td><td>RAG</td><td>Milvus, BentoML</td></tr>
<tr><td><a href="/docs/id/integrate_with_dspy.md">RAG dengan Milvus dan DSPy</a></td><td>RAG</td><td>Milvus, DSPy</td></tr>
<tr><td><a href="/docs/id/integrate_with_jina.md">Pencarian Semantik dengan Milvus dan Jina</a></td><td>Pencarian Semantik</td><td>Milvus, Jina</td></tr>
<tr><td><a href="/docs/id/integrate_with_snowpark.md">Milvus pada Layanan Kontainer Snowpark</a></td><td>Koneksi Data</td><td>Milvus, Snowpark</td></tr>
<tr><td><a href="/docs/id/integrate_with_whyhow.md">Pencarian Berbasis Aturan dengan Milvus dan WhyHow</a></td><td>Menjawab Pertanyaan</td><td>Milvus, WhyHow</td></tr>
<tr><td><a href="/docs/id/integrate_with_fastgpt.md">Cara menggunakan FastGPT dengan Milvus</a></td><td>RAG</td><td>Milvus, FastGPT</td></tr>
<tr><td><a href="/docs/id/integrate_with_vanna.md">Menulis SQL dengan Vanna dan Milvus</a></td><td>RAG</td><td>Milvus, Vanna</td></tr>
<tr><td><a href="/docs/id/integrate_with_camel.md">RAG dengan Milvus dan Camel</a></td><td>RAG</td><td>Milvus, Camel</td></tr>
<tr><td><a href="/docs/id/integrate_with_airbyte.md">Airbyte &amp; Milvus: Infrastruktur Pergerakan Data Sumber Terbuka</a></td><td>Koneksi Data</td><td>Milvus, Airbyte</td></tr>
<tr><td><a href="/docs/id/video_search_with_twelvelabs_and_milvus.md">Pencarian Video Tingkat Lanjut: Memanfaatkan Twelve Labs dan Milvus untuk Pencarian Semantik</a></td><td>Pencarian Semantik</td><td>Milvus, Dua Belas Laboratorium</td></tr>
<tr><td><a href="/docs/id/kafka-connect-milvus.md">Menghubungkan Kafka dengan Milvus</a></td><td>Sumber Data</td><td>Milvus, Kafka</td></tr>
<tr><td><a href="/docs/id/kotaemon_with_milvus.md">Kotaemon RAG dengan Milvus</a></td><td>RAG</td><td>Milvus, Kotaemon</td></tr>
<tr><td><a href="/docs/id/apify_milvus_rag.md">Pengambilan-Pembangkitan yang Ditambah: Merayapi Situs Web dengan Apify dan Menyimpan Data ke Milvus untuk Menjawab Pertanyaan</a></td><td>Sumber Data</td><td>Milvus, Apify</td></tr>
<tr><td><a href="/docs/id/build_rag_on_arm.md">Membangun RAG pada Arsitektur Arm</a></td><td>RAG</td><td>Milvus, Arm</td></tr>
<tr><td><a href="/docs/id/build_RAG_with_milvus_and_fireworks.md">Membangun RAG dengan Milvus dan Fireworks AI</a></td><td>LLM</td><td>Milvus, Fireworks AI</td></tr>
<tr><td><a href="/docs/id/build_RAG_with_milvus_and_lepton.md">Membangun RAG dengan Milvus dan Lepton AI</a></td><td>LLM</td><td>Milvus, Lepton AI</td></tr>
<tr><td><a href="/docs/id/build_RAG_with_milvus_and_siliconflow.md">Membangun RAG dengan Milvus dan SiliconFlow</a></td><td>LLM</td><td>Milvus, SiliconFlow</td></tr>
<tr><td><a href="/docs/id/rag_with_milvus_and_unstructured.md">Membangun RAG dengan Milvus dan Unstructured</a></td><td>Sumber Data</td><td>Milvus, Tidak Terstruktur</td></tr>
<tr><td><a href="/docs/id/RAG_with_pii_and_milvus.md">Membangun RAG dengan Milvus + PII Masker</a></td><td>Sumber Data</td><td>Milvus, PII Masker</td></tr>
<tr><td><a href="/docs/id/knowledge_table_with_milvus.md">Tabel Pengetahuan dengan Milvus</a></td><td>Rekayasa Pengetahuan</td><td>Tabel Pengetahuan, Milvus</td></tr>
<tr><td><a href="/docs/id/build_RAG_with_milvus_and_cognee.md">Membangun RAG dengan Milvus dan Cognee</a></td><td>Rekayasa Pengetahuan</td><td>Milvus, Cognee</td></tr>
<tr><td><a href="/docs/id/build_RAG_with_milvus_and_gemini.md">Membangun RAG dengan Milvus dan Gemini</a></td><td>LLM</td><td>Milvus, Gemini</td></tr>
<tr><td><a href="/docs/id/build_RAG_with_milvus_and_ollama.md">Membangun RAG dengan Milvus dan Ollama</a></td><td>LLM</td><td>Milvus, Ollama</td></tr>
<tr><td><a href="/docs/id/build_RAG_with_milvus_and_deepseek.md">Membangun RAG dengan Milvus dan DeepSeek</a></td><td>LLM</td><td>Milvus, DeepSeek</td></tr>
<tr><td><a href="/docs/id/build_RAG_with_milvus_and_crawl4ai.md">Membangun RAG dengan Milvus dan Crawl4AI</a></td><td>Sumber Data</td><td>Milvus, Crawl4AI</td></tr>
<tr><td><a href="/docs/id/build_RAG_with_milvus_and_firecrawl.md">Membangun RAG dengan Milvus dan Firecrawl</a></td><td>Sumber Data</td><td>Milvus, Firecrawl</td></tr>
<tr><td><a href="/docs/id/integration_with_mindsdb.md">Mengintegrasikan Milvus dengan MindsDB</a></td><td>Rekayasa Pengetahuan</td><td>Milvus, MindsDB</td></tr>
<tr><td><a href="/docs/id/build_RAG_with_milvus_and_feast.md">Membangun RAG dengan Milvus dan Feast</a></td><td>Sumber Data</td><td>Milvus, Feast</td></tr>
<tr><td><a href="/docs/id/build_RAG_with_milvus_and_docling.md">Membangun RAG dengan Milvus dan Docling</a></td><td>Sumber Data</td><td>Milvus, Docling</td></tr>
<tr><td><a href="/docs/id/build_RAG_with_milvus_and_embedAnything.md">Membangun RAG dengan Milvus dan EmbedAnything</a></td><td>Penyematan</td><td>Milvus, EmbedAnything</td></tr>
<tr><td><a href="/docs/id/milvus_and_n8n.md">Memulai dengan Milvus dan n8n</a></td><td>Orkestrasi</td><td>Milvus, n8n</td></tr>
<tr><td><a href="/docs/id/use_milvus_in_anythingllm.md">Menggunakan Milvus di AnythingLLM</a></td><td>Orkestrasi</td><td>Milvus, AnythingLLM</td></tr>
<tr><td><a href="/docs/id/NLWeb_with_milvus.md">Menggunakan NLWeb dengan Milvus</a></td><td>Sumber Data</td><td>Milvus, NLWeb</td></tr>
<tr><td><a href="/docs/id/langextract_milvus_demo.md">Integrasi LangExtract + Milvus</a></td><td>Sumber Data</td><td>Milvus, LangExtract</td></tr>
<tr><td><a href="https://colab.research.google.com/drive/1bONndT8MIxJZzzV4QTpQfU-eyWdL1Q1m?usp=sharing">Pencarian Semantik dengan ZeroEntropy dan Milvus</a></td><td>Pencarian Semantik</td><td>Milvus, ZeroEntropy</td></tr>
<tr><td><a href="/docs/id/langchain_milvus_dido.md">Mengintegrasikan Fungsi Penyematan Teks Milvus dengan LangChain</a></td><td>Penyematan Teks</td><td>Milvus, LangChain</td></tr>
<tr><td>[Membangun Agen RAG Sumber Ganda dengan Exa dan Milvus]</td><td>Sumber Data</td><td>Milvus, Exa</td></tr>
</tbody>
</table>
